--- a/notebooks/ConfiguracaoOpenBTS.ipynb
+++ b/notebooks/ConfiguracaoOpenBTS.ipynb
@@ -36,11 +36,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": "Se você vir a seguinte mensagem de alerta, ignore, tudo deu certo e seu OpenBTS está instalado corretamente:\n\nALERT 3074381568 15:15:45.5 TRXManager.cpp:595:getFactoryCalibration: READFACTORY\nfailed with status 1",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
       "source": "Em algumas versões do OpenBTS o openBTSCLI já é aberto automaticamente. Se não for, ele deve ser aberto para configurar algumas variáveis. Se você vir a tela abaixo, o openBTSCLI já está aberto.",
       "metadata": {}
     },
@@ -163,7 +158,9 @@
     {
       "cell_type": "markdown",
       "source": "### 4.3. Control.LUR.OpenRegistration - This tells OpenBTS to not reject your handset just because your registration server (below) isn't responding. Aqui você deve digitar a seguinte configuração:",
-      "metadata": {}
+      "metadata": {
+        "tags": []
+      }
     },
     {
       "cell_type": "markdown",
@@ -172,12 +169,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### 4.4. GSM.Radio.RxGain - Receiver gain setting in dB. Aqui você deve digitar a seguinte configuração:\nO valor ideal é determinado pelo hardware; 47 dB para RAD1 e 0-10 dB para hardware Ettus. Este parâmetro do banco de dados é estático, mas o ganho do receptor pode ser modificado em tempo real com o comando CLI \"rxgain\".",
+      "source": "### 4.4. GSM.Radio.RxGain - Receiver gain setting in dB. Aqui você deve digitar a seguinte configuração:\nO valor ideal é determinado pelo hardware é 47 dB para RAD1 e 0-10 dB para hardware Ettus. Este parâmetro do banco de dados é estático, mas o ganho do receptor pode ser modificado em tempo real com o comando CLI \"rxgain\".\n\nRef. Getting Started with OpenBTS, pg 39.",
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "source": "devconfig GSM.Radio.RxGain 2",
+      "source": "OpenBTS> devconfig GSM.Radio.RxGain 2",
       "metadata": {
         "trusted": true
       },
@@ -203,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "source": "OpenBTS> help (ver todos os commandos disponíveis)",
+      "source": "OpenBTS> help (Ver todos os commandos disponíveis)\nOpenBTS> audit (Para determinar se algo precisa ser ajustado)",
       "metadata": {},
       "execution_count": null,
       "outputs": []
